--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-maps": "^0.23.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-range-datepicker": "^1.8.2",
+    "react-native-searchable-list": "^1.1.3",
     "react-native-select2": "^1.0.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.2",
