--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-multiple-select": "^0.4.4",
     "react-native-radio-buttons-group": "^1.0.7",
     "react-native-range-datepicker": "^1.8.2",
     "react-native-searchable-list": "^1.1.3",
