--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-calendar-picker": "^5.22.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-firebase": "^5.2.3",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.0.16",
