--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-firebase": "^5.2.3",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-gifted-chat": "^0.7.2",
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-modal-datetime-picker": "^6.0.0",
